# bachelorproef

./: .clang-format  .gitignore  .travis.yml  AUTHORS.txt  DEPENDENCIES.txt  INSTALL.txt  LICENSE.txt  Makefile  PLATFORMS.txt  README.md  README.txt  appveyor.yml  push-report-helper.sh  push-report.sh
src/: CMakeBuildConfig.txt  CMakeCMakeConfig.txt  CMakeCPPConfig.txt  CMakeConfigReport.txt  CMakeLists.txt
src/doc/: CMakeLists.txt
src/doc/doxygen_ref_man/: CMakeLists.txt  Doxyfile.cmake.in
src/doc/doxygen_ref_man/additional_input/: mainpage.doxy  namespaces.doxy
src/doc/latex_user_man/: 01-Introduction.tex  02-Software.tex  03-Simulator.tex  04-Parallelization.tex  05-Visualizer.tex  06-Multiregion.tex  CMakeLists.txt  Makefile  Refs.bib  UserManual.tex
src/doc/project_report/: final-report.aux  final-report.bbl  final-report.bib  final-report.blg  final-report.run.xml  final-report.tex  final-report.toc
src/main/: CMakeLists.txt
src/main/cpp/: CMakeLists.txt
src/main/cpp/alias/: Alias.cpp  Alias.h  AliasUtil.h
src/main/cpp/calendar/: Calendar.cpp  Calendar.h  DaysOffAll.h  DaysOffInterface.h  DaysOffNone.h  DaysOffSchool.h  DaysOffStandard.h
src/main/cpp/checkpoint/: CheckPoint.cpp  CheckPoint.h
src/main/cpp/core/: Age.h  Atlas.cpp  Atlas.h  Cluster.cpp  Cluster.h  ClusterType.cpp  ClusterType.h  ContactHandler.h  ContactProfile.cpp  ContactProfile.h  Disease.cpp  Disease.h  DiseaseProfile.cpp  DiseaseProfile.h  Health.cpp  Health.h  Infector.cpp  Infector.h  LogMode.cpp  LogMode.h  MasterProfile.h  Person.cpp  Person.h  Population.h  PopulationBuilder.cpp  PopulationBuilder.h  RngHandler.h
src/main/cpp/geo/: City.h  GeoPosition.h  Profile.cpp  Profile.h
src/main/cpp/http/: handlers.cpp  handlers.h  prototype.cpp  prototype.h  server.cpp  server.h
src/main/cpp/multiregion/: LocalSimulationTask.h  ParallelSimulationManager.h  SequentialSimulationManager.h  SimulationConfig.cpp  SimulationConfig.h  SimulationManager.h  TravelModel.cpp  TravelModel.h  Visitor.h  VisitorJournal.h
src/main/cpp/output/: CasesFile.cpp  CasesFile.h  PersonFile.cpp  PersonFile.h  SummaryFile.cpp  SummaryFile.h  VisualizerData.cpp  VisualizerData.h  VisualizerFile.cpp  VisualizerFile.h
src/main/cpp/pop/: Age.h  Generator.cpp  Generator.h  Household.cpp  Household.h  Model.cpp  Model.h  Person.cpp  Person.h  Population.cpp  Population.h  PopulationBuilder.cpp  PopulationBuilder.h  PopulationGenerator.cpp  PopulationGenerator.h  PopulationModel.cpp  PopulationModel.h
src/main/cpp/sim/: Calendar.cpp  Calendar.h  SimulationConfig.cpp  SimulationConfig.h  Simulator.cpp  Simulator.h  SimulatorBuilder.cpp  SimulatorBuilder.h  WorldEnvironment.cpp  WorldEnvironment.h  indismo.cpp  main.cpp  run_stride.cpp  run_stride.h
src/main/cpp/util/: Alias.cpp  Alias.h  AliasUtil.h  ConfigInfo.h  Errors.h  ExternalVars.h  InclusiveRange.h  InstallDirs.cpp  InstallDirs.h  Parallel.cpp  Parallel.h  ParallelMap.h  RNG.h  Random.h  Signals.cpp  Signals.h  Stopwatch.h  StringUtils.h  Subject.h  TimeStamp.h  TimeToString.h  TrackIndexCase.h  conststr.h
src/main/cpp/viz/: prototype.cpp  prototype.h  visualiser.cpp  visualiser.h  viz.qml
src/main/html/: index.html  script.js
src/main/python/: CMakeLists.txt  create_contactmatrix.py  datastruct_perf.py  interactive_maps.py  log2csv.py  plot_maps.py  plot_times.py  plot_times_multR0.py  plots_holidays.py  prepare_csv.py  requirements.txt  sim_contacts.py  sim_wrapper.py  slider_maps.py  wrapper_stride.py
src/main/r/: .Rhistory  CMakeLists.txt  InstallDirs.cpp  InstallDirs.h  extract_data_2010_v1.R  extract_data_midas_v2010.R  plot_results_lib.R  plot_social_contacts_lib.R  score_cnt_data_lib.R
src/main/resources/: CMakeLists.txt
src/main/resources/cmake/: FindAwesomium.cmake  MakeLocalConfig
src/main/resources/config/: config_ar_alaska.json  config_ar_brooklyn.json  config_ar_nassau.json  config_default.json  config_default_contacts.json  config_ds_perf_influenza.json  config_ds_perf_measles.json  config_holidays_influenza.json  config_holidays_measles.json  contact_matrix.xml  disease_config_measles.xml  run_config_all_contacts.xml  run_config_default.xml  run_config_extra_params_example.xml  run_config_influenza.xml  run_config_measles.xml  run_contacts.xml  run_default.xml  run_miami_week.xml  run_miami_weekend.xml  run_multiregion.xml  run_popgen_large.xml  run_popgen_medium.xml  run_popgen_small.xml  run_test_popgen.xml  run_test_save.xml  run_test_visualizer.xml  run_travel_test.xml  wrapper_default.json  wrapper_miami.json  wrapper_miami_contacts.json  wrapper_miami_r0.json  wrapper_miami_transmissions.json
src/main/resources/data/: belgium_commuting.csv  belgium_commuting_major.csv  belgium_population.csv  contact_matrix.xml  contact_matrix_average.xml  contact_matrix_week_week.xml  contact_matrix_week_weekend.xml  disease_influenza.xml  disease_measles.xml  fl2010_regular_weekday_household_gam_mij_rec.csv  flanders50_pop_data_random.csv  households_flanders.json  popgen_default.xml  population_model_default.xml  population_model_large.xml  population_model_medium.xml  population_model_test.xml  population_save_test.xml  ref_fl2010_regular_weekday_community_gam_mij_rec.csv  ref_fl2010_regular_weekday_gam_mij_rec.csv  ref_fl2010_regular_weekday_school_gam_mij_rec.csv  ref_fl2010_regular_weekday_workplace_gam_mij_rec.csv  ref_fl2010_weekend_community_gam_mij_rec.csv  travel_test.xml
src/main/resources/html/: colour.js  main.html  map.js  panel.js  script.js  style.css  util.js
src/main/resources/lib/: CMakeLists.txt
src/main/resources/make/: MakeLocalConfig
src/main/resources/python/: aggregate_time_measurements.py
src/main/resources/sh/: time_parallel_map.sh  time_parallelization.sh
src/main/resources/views/: test.html
src/test/: CMakeLists.txt
src/test/cpp/: CMakeLists.txt
src/test/cpp/gtester/: AliasTest.cpp  AwesomiumTests.cpp  BatchDemos.cpp  BatchRuns.cpp  CMakeLists.txt  CheckPointTest.cpp  GeoPosition.cpp  HTTPProtoTest.cpp  MpiTests.cpp  ParallelTest.cpp  main.cpp  (+7 more)
src/test/resources/: CMakeLists.txt
(+91 files in other folders)
