#############################################################################
# Add subdirs:
#############################################################################
add_subdirectory( doxygen_ref_man )
add_subdirectory( latex_user_man )

#############################################################################
