#============================================================================
# Add subdirs:
#============================================================================
add_subdirectory( cpp         )
add_subdirectory( python      )
add_subdirectory( r           )
add_subdirectory( resources   )

#############################################################################
