#============================================================================
# Manual
#============================================================================
install(
		FILES          UserManual.pdf
		DESTINATION    ${DOC_INSTALL_LOCATION}
)


#############################################################################
